--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-minimal
+    theme: jekyll-theme-minimal
+
+title: Lemon's Homepage
+description: A hoempage for Lemon 
+
+logo: https://raw.githubusercontent.com/gaoljhy/gaoljhy.github.io/master/logo.jpeg
+show_downloads: false
