--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
-title: Lemon's Homepage
-description: A hoempage for Lemon 
+title: Geek's Homepage
+description: Work @ ChangChun, Chinese Academy of Sciences,I'm a Research assistant
 
-logo: https://raw.githubusercontent.com/gaoljhy/gaoljhy.github.io/master/logo.jpeg
-show_downloads: false
+logo: https://s1.ax1x.com/2018/12/03/FMALs1.jpg
+show_downloads: true
