--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
 title: Geek's Homepage
-description: Work @ ChangChun, Chinese Academy of Sciences,I'm a Research assistant
+description: Eat the bitter bitter for the man
 
 logo: https://s1.ax1x.com/2018/12/03/FMALs1.jpg
-show_downloads: true
+show_downloads: false
