--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
-title: Geek's Homepage
+title: Geek
 description: Eat the bitter bitter for the man
 
-logo: https://s1.ax1x.com/2018/12/03/FMALs1.jpg
+logo: https://github.com/Geek-007/geek-007.github.io/blob/master/logo.jpg
 show_downloads: false
