--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
-title: Geek
+title: Geek's HomePage
 description: Eat the bitter bitter for the man
 
 logo: https://github.com/Geek-007/geek-007.github.io/blob/master/logo.jpg
