--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout codes'
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
       - name: 'run'
-        run: bash ./run.sh
+        run: bash run.sh
       - name: 'date'
         run: echo `date` > date.log
       - name: Commit and push if changed 
